# ParallelizationOfBubbleSortInCPP

./: CMakeLists.txt  main.cpp  openmp_exercise1.cpp
